add updated REST API functions WT-1549
