# src/gen/swagger/com/sonicle/webtop/mail/swagger/v1/api/MeFoldersApi.java
@@ -1,6 +1,7 @@
 package com.sonicle.webtop.mail.swagger.v1.api;
 
 import com.sonicle.webtop.mail.swagger.v1.model.ApiFolder;
+import com.sonicle.webtop.mail.swagger.v1.model.ApiFolderInfo;
 
 import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
@@ -15,8 +16,24 @@ import javax.validation.Valid;
 
 @Path("/me/folders")
 @Api(description = "the MeFolders API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2026-04-13T16:11:50.819+02:00[Europe/Rome]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2026-04-14T18:08:52.975+02:00[Europe/Rome]")
 public abstract class MeFoldersApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
+
+    @GET
+    @Path("/info")
+    @Produces({ "application/json" })
+    @ApiOperation(value = "Get folder info", notes = "", response = ApiFolderInfo.class, authorizations = {
+        
+        @Authorization(value = "basicAuth"),
+        
+        @Authorization(value = "bearerAuth")
+         }, tags={ "me_folders" })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Success", response = ApiFolderInfo.class)
+    })
+    public Response getFolderInfo(@QueryParam("folder_id")   String folderId) {
+        return Response.ok().entity("magic!").build();
+    }
 
     @GET
     @Path("/children")
